# batcontrol

./: .gitignore  .gitmodules  Dockerfile  HOWITWORKS  HOWITWORKS.md  LICENSE  README.MD  batcontrol.py  batcontrol.py.bak  battery_config.json  build_docker.sh  entrypoint.sh  entrypoint_ha.sh  evcc_api.py  load_profile.csv  main.py  mqtt_api.py  p.py  profile_mean.csv  pyproject.toml  pytest.ini  repopackpy-output.txt  requirements.txt  run_tests.ps1  run_tests.sh
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: bump_version.yml  docker-image.yml  prepare-release.yml  pylint.yml  pytest.yml
config/: batcontrol_config.yaml.bpk  batcontrol_config.yml.bkp  batcontrol_config_dummy.yaml  batcontrol_config_dummy.yaml.bak  grafana-overview.json  telegraf.sample.conf
docs/: 15-min-transform.md  README.md  evcc-dynamic-tariff.md
dynamictariff/: awattar.py  baseclass.py  dynamictariff.py  dynamictariff_interface.py  evcc.py  tibber.py
forecastconsumption/: Energy_data.csv  consumption.py  forecast_csv.py  forecastconsumption.py  forecastconsumption_interface.py  fronius_solar_web.py
forecastsolar/: fcsolar.py  forecastsolar.py  forecastsolar.py.bak  forecastsolar_interface.py  solar.py  solarprognose.py
fronius/: baseclass.py  fronius.py  fronius.py.bak  inverter.py  testdriver.py
heatpump/: baseclass.py  dummy_heatpump.py  heatpump.py  silent_heatpump.py  thermia_heatpump.py
inverter/: baseclass.py  fronius.py  inverter.py  inverter_interface.py  testdriver.py
logfilelimiter/: logfilelimiter.py
scripts/: README.md  test_evcc.py  test_homeassistant_forecast.py  test_solar_forecast_ha_ml.py  verify_production_offset.py
src/batcontrol/: __init__.py  __main__.py  __pkginfo__.py  core.py  evcc_api.py  interval_utils.py  mqtt_api.py  provider_manager.py  scheduler.py  scheduler_examples.py  setup.py
src/batcontrol/dynamictariff/: __init__.py  awattar.py  baseclass.py  dynamictariff.py  dynamictariff_interface.py  energyforecast.py  evcc.py  tariffzones.py  tibber.py  twotariffmode.py
src/batcontrol/fetcher/: __init__.py  relaxed_caching.py
src/batcontrol/fetching/: __init__.py  base_fetcher.py  cache_manager.py  constants.py  http_client.py  rate_limit_manager.py
src/batcontrol/forecastconsumption/: __init__.py  baseclass.py  consumption.py  forecast_csv.py  forecast_homeassistant.py  forecastconsumption_interface.py  fronius_solar_web.py
src/batcontrol/forecastsolar/: __init__.py  baseclass.py  evcc_solar.py  fcsolar.py  forecast_homeassistant_ml.py  forecastsolar_interface.py  solar.py  solarprognose.py
src/batcontrol/inverter/: __init__.py  baseclass.py  dummy.py  exceptions.py  fronius.py  inverter.py  inverter_interface.py  mqtt_inverter.py  resilient_wrapper.py  testdriver.py
src/batcontrol/logfilelimiter/: logfilelimiter.py
src/batcontrol/logic/: __init__.py  common.py  default.py  default_logic.py  logic.py  logic_interface.py
src/batcontrol/logs/: __init__.py
src/batcontrol/logutils/: __init__.py  config.py  logfilelimiter.py
tests/: conftest.py  test_forecast_solar_homeassistant_ml.py
tests/batcontrol/: test_core.py  test_interval_utils.py  test_production_offset.py
tests/batcontrol/dynamictariff/: __init__.py  test_baseclass.py  test_energyforecast.py  test_evcc.py  test_tariffzones.py  test_tibber.py
tests/batcontrol/fetcher/: __init__.py  test_relaxed_caching.py
tests/batcontrol/forecastconsumption/: __init__.py  test_baseclass.py  test_homeassistant.py  (+1 more)
tibber/: tibber.py
(+12 files in other folders)
