[project]
name = "batcontrol"
dynamic = ["version"]
description = "Optimize electricity costs by recharging your PV battery when electricity is cheap and solar power is insufficient"
authors = [{name = "Stephan Mükusch", email = "muexxl@gmx.net"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
requires-python = ">3.8, <3.14"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "PyYAML>=6.0",
    "requests>=2.28",
    "paho-mqtt>=2.0",
    "packaging>=23.0",
    "cachetools>=5.0",
    "websockets>=11.0",
    "schedule>=1.2.0",
    "pytz>=2024.2"
]

# Config for the build system
[build-system]
requires = ["setuptools>=66.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["./src"]

[tool.setuptools.dynamic]
version = {attr = "batcontrol.__pkginfo__.__version__"}

# Configure additional tools
[tool.uv]
required-version = "~=0.7.0" # Pin uv to major version for stability

# Testing configuration
[tool.pytest]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
pythonpath = ["src"]

# For testing
[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

# Bump Version
[tool.bumpversion]
current_version = "0.6.1"
parse = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)(?P<release>dev)?"
serialize = [
    "{major}.{minor}.{patch}{release}",
    "{major}.{minor}.{patch}"
]
ignore_current_version = true
tag_name = "{new_version}"
message = "Bump version: {current_version} → {new_version}"

[tool.bumpversion.parts.release]
optional_value = ""
values = [
    "dev",
    ""
]

[[tool.bumpversion.files]]
filename = "src/batcontrol/__pkginfo__.py"
search = "__version__ = \"{current_version}\""
replace = "__version__ = \"{new_version}\""
